# flut

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.bat
cmake/: FindEigen.cmake  FindGLBinding.cmake  FindGLEW.cmake  FindSDL2.cmake  Findglbinding.cmake
res/: buildGrid1.comp  buildGrid3.comp  densityComputation.comp  forceUpdate.comp  gridIndexing.comp  gridInsert.comp  gridSort.comp  positionUpdate.comp  renderBoundingBox.vert  renderCurvature.frag  renderFlat.frag  renderFullscreen.vert  renderGauss.frag  renderGeometry.frag  renderGeometry.vert  renderShading.frag  simStep1.comp  simStep2.comp  simStep3.comp  simStep4.comp  simStep5.comp  simStep6.comp  simpleColor.frag  simpleColor.vert  simpleMod.comp  simplePoint.vert  velocityUpdate.comp
shaders/: renderCurvature.frag  renderGeometry.frag  renderGeometry.vert  renderShading.frag  simStep1.comp  simStep2.comp  simStep3.comp  simStep4.comp  simStep5.comp  simStep6.comp
src/: BaseRenderer.cpp  BaseRenderer.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Simulation.cpp  Simulation.hpp  main.cpp
src/ansimproj/: CMakeLists.txt  Simulation.cpp  Simulation.hpp  main.cpp
src/ansimproj/core/: Camera.cpp  Camera.hpp  SimulationBase.cpp  SimulationBase.hpp  Window.cpp  Window.hpp
src/core/: BaseRenderer.cpp  BaseRenderer.hpp  Camera.cpp  Camera.hpp  SimulationBase.cpp  SimulationBase.hpp  Utils.hpp  Window.cpp  Window.hpp
src/flut/: CMakeLists.txt  Camera.cpp  Camera.hpp  GlHelper.cpp  GlHelper.hpp  GlQueryRetriever.cpp  GlQueryRetriever.hpp  Simulation.cpp  Simulation.hpp  Window.cpp  Window.hpp  main.cpp
src/flut/core/: Camera.cpp  Camera.hpp  SimulationBase.cpp  SimulationBase.hpp  Utils.hpp  Window.cpp  Window.hpp
src/imgui/: CMakeLists.txt  imgui_impl_sdl_glbinding.cpp  imgui_impl_sdl_glbinding.h  imgui_impl_sdl_glew.cpp  imgui_impl_sdl_glew.h
src/imgui/include/: imgui_impl_sdl_glad.h
src/imgui/src/: imgui_impl_sdl_glad.cpp
